+ new layout, + namespaces to assign different colors to the containers, + content using the row

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,11 @@
 @import "bootstrap/scss/bootstrap";
+
+//= require_tree .
+
+.pages{
+  background-color: red;
+}
+
+.products{
+  background-color: green;
+}
