--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<br>
+<br>
+<br>
+<div class="row">
+	
+
+<div class="container col-md-2">
+	<h1>Pages#about</h1>
+</div>
+<div class="container col-md-2">
+	<p>Find me in app/views/pages/about.html.erb</p>
+</div>
+
+</div>
