--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,24 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="<%= params[:controller] %>">
-    <%= yield %>
+  <body>
+
+     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-warning">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="<%=pages_home_path%>">Home</a>
+            <a class="nav-item nav-link" href="<%=pages_about_path%>">About</a>
+            <a class="nav-item nav-link" href="<%=products_path%>">Product index</a>
+          </div>
+        </div>
+      </nav>
+    
+    <div class="container <%= params[:controller] %>">
+      <%= yield %>
+    </div>
   </body>
 </html>
