--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<br>
+<br>
+<br>
+<div class="row">
+	
+
+<div class="container col-md-5">
+	<h1>Pages#home</h1>
+</div>
+<div class="container col-md-5">
+	<p>Find me in app/views/pages/home.html.erb</p>
+</div>
+
+</div>
